Bug 1264470 - a=identity is a long attribute, r=bwc

--HG--
extra : rebase_source : 077cb5cf4017cce619ed59decd405d706683d620